fix(catalog post preview): special characters were able to overflow

--- a/src/components/catalog-row/catalog-row.module.css
+++ b/src/components/catalog-row/catalog-row.module.css
@@ -124,6 +124,7 @@
   color: var(--catalog-post-preview-color);
   font-family: arial, helvetica, sans-serif;
   font-size: 10pt;
+  overflow: hidden;
 }
 
 .postPreview .postSubject {
